@@ -16,6 +16,11 @@
 			ctagsinterface.main.CtagsInterfacePlugin.deleteCurrentFile(view);
 		</CODE>
 	</ACTION>
+	<ACTION NAME="ctags-interface-remove-all-tags" NO_REPEAT="TRUE">
+		<CODE>
+			ctagsinterface.main.CtagsInterfacePlugin.deleteAll(view);
+		</CODE>
+	</ACTION>
 	<ACTION NAME="ctags-interface-jump-to-tag" NO_REPEAT="TRUE">
 		<CODE>
 			ctagsinterface.main.CtagsInterfacePlugin.jumpToTag(view);
